<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cook_layer_raised"
    android:orientation="vertical"
    android:paddingStart="@dimen/cook_padding_sheet_x"
    android:paddingTop="@dimen/cook_padding_sheet_top"
    android:paddingEnd="@dimen/cook_padding_sheet_x"
    android:paddingBottom="@dimen/cook_padding_sheet_bottom">

    <View
        android:layout_width="@dimen/cook_touch_48"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_sheet_handle" />

    <TextView
        android:id="@+id/pickerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cook_spacing_20"
        android:text="@string/recipe_picker_title"
        android:textAppearance="@style/TextAppearance.CookPilot.TitleL"
        android:textColor="@color/cook_text_primary" />

    <TextView
        android:id="@+id/pickerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cook_spacing_4"
        android:text="@string/recipe_picker_subtitle"
        android:textAppearance="@style/TextAppearance.CookPilot.BodySmall"
        android:textColor="@color/cook_text_secondary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeGrid"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="@dimen/cook_spacing_20"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/cook_spacing_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addRecipesButton"
        style="@style/Widget.CookPilot.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cook_touch_56"
        android:layout_marginTop="@dimen/cook_spacing_16"
        android:text="@string/recipe_picker_add" />

</LinearLayout>
