<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cook_layer_base">

    <TextView
        android:id="@+id/recipesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cook_padding_screen_x"
        android:layout_marginTop="@dimen/cook_spacing_12"
        android:text="@string/nav_recipes"
        android:textAppearance="@style/TextAppearance.CookPilot.TitleXL"
        android:textColor="@color/cook_text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cook_padding_screen_x"
        android:layout_marginTop="@dimen/cook_spacing_4"
        android:text="@string/recipes_count_zero"
        android:textAppearance="@style/TextAppearance.CookPilot.BodySmall"
        android:textColor="@color/cook_text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipesTitle" />

    <TextView
        android:id="@+id/cachedNotice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cook_padding_screen_x"
        android:layout_marginTop="@dimen/cook_spacing_12"
        android:layout_marginEnd="@dimen/cook_padding_screen_x"
        android:background="@drawable/bg_cached_notice"
        android:gravity="center"
        android:paddingHorizontal="@dimen/cook_spacing_12"
        android:paddingVertical="@dimen/cook_spacing_8"
        android:text="@string/recipes_cached_notice"
        android:textAppearance="@style/TextAppearance.CookPilot.LabelSmall"
        android:textColor="@color/cook_primary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeCount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/cook_spacing_20"
        android:paddingTop="@dimen/cook_spacing_16"
        android:paddingEnd="@dimen/cook_spacing_20"
        android:paddingBottom="@dimen/cook_spacing_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cachedNotice" />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="@dimen/cook_icon_40"
        android:layout_height="@dimen/cook_icon_40"
        android:indeterminateTint="@color/cook_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeCount" />

    <LinearLayout
        android:id="@+id/errorState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cook_padding_screen_x"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeCount">

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recipes_error"
            android:textAppearance="@style/TextAppearance.CookPilot.Body"
            android:textColor="@color/cook_text_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            style="@style/Widget.CookPilot.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/cook_touch_56"
            android:layout_marginTop="@dimen/cook_spacing_16"
            android:text="@string/recipes_retry" />

    </LinearLayout>

    <TextView
        android:id="@+id/emptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recipes_empty"
        android:textAppearance="@style/TextAppearance.CookPilot.Body"
        android:textColor="@color/cook_text_secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeCount" />

</androidx.constraintlayout.widget.ConstraintLayout>
