<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cook_app_bar_height">

    <LinearLayout
        android:id="@+id/brandTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:includeFontPadding="false"
            android:text="@string/brand_cook"
            android:textColor="@color/cook_text_primary"
            android:textSize="@dimen/cook_text_display_m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:includeFontPadding="false"
            android:text="@string/brand_pilot"
            android:textColor="@color/cook_primary"
            android:textSize="@dimen/cook_text_display_m" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/avatarCard"
        android:layout_width="@dimen/cook_app_bar_avatar_size"
        android:layout_height="@dimen/cook_app_bar_avatar_size"
        android:clickable="true"
        android:contentDescription="@string/profile_avatar"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardBackgroundColor="@color/cook_layer_floating"
        app:cardCornerRadius="@dimen/cook_radius_full"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatarIcon"
            android:layout_width="@dimen/cook_icon_20"
            android:layout_height="@dimen/cook_icon_20"
            android:layout_gravity="center"
            android:contentDescription="@null"
            app:tint="@color/cook_text_primary" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
