<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cook_layer_raised"
    android:orientation="vertical"
    android:paddingStart="@dimen/cook_padding_sheet_x"
    android:paddingTop="@dimen/cook_padding_sheet_top"
    android:paddingEnd="@dimen/cook_padding_sheet_x"
    android:paddingBottom="@dimen/cook_padding_sheet_bottom">

    <View
        android:layout_width="@dimen/cook_touch_48"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_sheet_handle" />

    <EditText
        android:id="@+id/timerTitleInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cook_touch_56"
        android:layout_marginTop="@dimen/cook_spacing_20"
        android:background="@null"
        android:fontFamily="@font/outfit_semibold"
        android:hint="@string/cooking_timer_name"
        android:singleLine="true"
        android:textColor="@color/cook_text_primary"
        android:textColorHint="@color/cook_text_tertiary"
        android:textSize="@dimen/cook_text_title_l" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/cook_spacing_20"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/hoursPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/minutesPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/secondsPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timerPrimaryButton"
        style="@style/Widget.CookPilot.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cook_touch_56"
        android:layout_marginTop="@dimen/cook_spacing_20"
        android:text="@string/cooking_timer_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timerDeleteButton"
        style="@style/Widget.CookPilot.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cook_touch_56"
        android:layout_marginTop="@dimen/cook_spacing_12"
        android:text="@string/cooking_timer_delete"
        android:visibility="gone" />
</LinearLayout>
